<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:gravity="center"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".loginActivity">

    <ProgressBar
        android:id="@+id/login_progressbar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/user_profile_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"/>
        <AutoCompleteTextView
            android:id="@+id/email_edittext"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/login_button"
            android:text="@string/login"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:backgroundTint="#FFEBEE"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="or"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/signup_button"
            android:text="@string/signup"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:backgroundTint="#FFEBEE"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>